--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>jianrong Zhang interview</title>
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   
   <body>
-  	明灿是个屌丝！！！！
+  		Hello world
   </body>
   
 </html>
